<resources>
    <string name="app_name">TaskNote</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui\nnenhum tarefa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_menu_home">Home</string>
    <string name="txt_menu_tarefas">Tarefas</string>
    <string name="txt_menu_sobre">Sobre</string>
    <string name="txt_close_drawer">Abrir</string>
    <string name="txt_open_drawer">Fechar</string>
    <string name="txt_home">Voltar para a tela inicial</string>
    <string name="txt_desenvolvido">Desenvolvimento: Agosto/2021</string>
    <string name="txt_finalidade">Finalidade: Bootcamp Santander</string>
    <string name="txt_curso">Área: Desenvolvimento Mobile</string>
    <string name="txt_desenvolvedor">Dev: Ricardo Castilho Resende</string>
    <string name="txt_contato">Contato: rcr109@gmail.com</string>
    <string name="txt_descricao">Descrição</string>
    <string name="txt_titulo_nova_tarefa">Inclusão de tarefa</string>
    <string name="txt_teste_data">01/01/79</string>
    <string name="txt_menu_sair">Sair</string>
    <string name="txt_titulo_tela_add">Edição de tarefa</string>
    <string name="label_ID">ID: </string>
    <string name="label_titulo">TÍTULO: </string>
    <string name="label_data">DATA: </string>
    <string name="label_descricao">DESCRIÇÃO: </string>
    <string name="label_hora">HORA: </string>
    <string name="txt_all_tasks">Retornar todas as tarefas</string>
</resources>