<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.SobreActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nsobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sobre este App:"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="bold"
        android:textColor="@color/laranja"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Id: MultiTools"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_nsobre"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desenvolvido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_desenvolvido"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_nome"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_finalidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_finalidade"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_desenvolvido"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_curso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_curso"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_finalidade"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_desenvolvedor"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_curso"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_contato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_contato"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_dev"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/txt_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/laranja"
        app:srcCompat="@drawable/ic_back2" />

</androidx.constraintlayout.widget.ConstraintLayout>