<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskDetails">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="8dp" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Detalhes da tarefa 42"
        android:textSize="24sp"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="bold"
        android:textColor="@color/laranja"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_ID"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_id_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_ID"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toEndOf="@id/tv_id"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_titulo_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_titulo"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_titulo_task_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_titulo"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintStart_toEndOf="@id/tv_titulo_task"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_data"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_task"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_data_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_data"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_task"
        app:layout_constraintStart_toEndOf="@id/tv_data"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_hora"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_data"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hora_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_hora"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_data"
        app:layout_constraintStart_toEndOf="@id/tv_hora"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_descricao"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_hora"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_descricao_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_descricao"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_descricao"
        app:layout_constraintStart_toStartOf="@id/guide_start"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:backgroundTint="@color/laranja"
        android:contentDescription="@string/label_description_new_task"
        app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:srcCompat="@drawable/ic_back2" />

</androidx.constraintlayout.widget.ConstraintLayout>